Improved SEO and correct font import

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,26 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ZUROS NETWORK</title>
+    <title>ZUROS NETWORK - Servidor de Minecraft Survival y Minijuegos</title>
+    <meta name="description" content="Zuros Network - Servidor inclusivo de Minecraft sin toxicidad, compatible con Java y Bedrock." />
+    <meta name="author" content="Zuros Network" />
+    <meta name="keywords" content="Minecraft, Servidor Minecraft, Java, Bedrock, LGBTQ+ Friendly, Minijuegos, Survival" />
+    
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Zuros Network - Servidor de Minecraft Survival y Minijuegos" />
+    <meta property="og:description" content="Únete a Zuros Network, un servidor inclusivo y libre de toxicidad, compatible con Minecraft Java y Bedrock." />
+    <meta property="og:image" content="/presentation-background.png" />
+    <meta property="og:url" content="https://zuros.xyz" /> 
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />  
+    <meta name="twitter:title" content="Zuros Network - Servidor de Minecraft Survival y Minijuegos" />
+    <meta name="twitter:description" content="Servidor inclusivo de Minecraft, libre de toxicidad y 100% LGBTQ+ Friendly." />
+    <meta name="twitter:image" content="/presentation-background.png" />
   </head>
   <body>
     <div id="root"></div>
